[gd_scene load_steps=12 format=3 uid="uid://mox860tawomi"]

[ext_resource type="Texture2D" uid="uid://cpydvk8mq66o5" path="res://art/tile_0087.png" id="1_daa4p"]
[ext_resource type="Script" path="res://scenes/StartGame/start_game.gd" id="1_y8ctj"]
[ext_resource type="Texture2D" uid="uid://cwf6dyi56tgo" path="res://art/tile_0088.png" id="2_ehuvp"]
[ext_resource type="Texture2D" uid="uid://dpfqok8tuy4r7" path="res://art/tile_0084.png" id="3_tu3st"]
[ext_resource type="Texture2D" uid="uid://dc7crere7e7ow" path="res://art/tile_0099.png" id="4_unxo7"]
[ext_resource type="Texture2D" uid="uid://c24y6l0ivlqp7" path="res://art/tile_0108.png" id="5_lr5r8"]
[ext_resource type="Texture2D" uid="uid://1u3b3hwqd8yh" path="res://art/tile_0110.png" id="6_w456g"]
[ext_resource type="Texture2D" uid="uid://con6y7mc74c5a" path="res://art/tile_0120.png" id="7_o5s6u"]

[sub_resource type="Gradient" id="Gradient_kf2kj"]
offsets = PackedFloat32Array(0, 0.714597, 0.923747)
colors = PackedColorArray(0.376657, 0.208991, 0.024989, 1, 0.329955, 0.000779496, 0.163903, 1, 0.259882, 0.0902291, 0.252119, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_urcne"]
gradient = SubResource("Gradient_kf2kj")

[sub_resource type="LabelSettings" id="LabelSettings_o16kr"]
font_size = 12
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y8ctj")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_urcne")

[node name="Title" type="Label" parent="."]
layout_mode = 2
offset_left = 24.0
offset_top = 21.0
offset_right = 232.0
offset_bottom = 48.0
text = "The who knows card game,
just play it"
label_settings = SubResource("LabelSettings_o16kr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -75.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_constants/separation = 9

[node name="NewGame" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(42, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "new"

[node name="Continue" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(42, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "continue"

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(42, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "quit"

[node name="Node2D2" type="Control" parent="."]
y_sort_enabled = true
anchors_preset = 0

[node name="Princess" type="TextureRect" parent="Node2D2"]
y_sort_enabled = true
layout_mode = 0
offset_left = 10.0
offset_top = 87.8
offset_right = 26.0
offset_bottom = 103.8
scale = Vector2(1.6, 1.6)
texture = ExtResource("4_unxo7")

[node name="Knight" type="TextureRect" parent="Node2D2"]
y_sort_enabled = true
layout_mode = 0
offset_left = 65.0
offset_top = 101.8
offset_right = 81.0
offset_bottom = 117.8
scale = Vector2(1.6, 1.6)
texture = ExtResource("1_daa4p")

[node name="Savage" type="TextureRect" parent="Node2D2"]
y_sort_enabled = true
layout_mode = 0
offset_left = 39.2
offset_top = 106.0
offset_right = 55.2
offset_bottom = 122.0
scale = Vector2(1.6, 1.6)
texture = ExtResource("2_ehuvp")

[node name="Wizard" type="TextureRect" parent="Node2D2"]
y_sort_enabled = true
layout_mode = 0
offset_left = 46.2
offset_top = 79.0
offset_right = 62.2
offset_bottom = 95.0
scale = Vector2(1.6, 1.6)
texture = ExtResource("3_tu3st")

[node name="Soul" type="TextureRect" parent="Node2D2"]
y_sort_enabled = true
layout_mode = 0
offset_left = 182.0
offset_top = 86.0
offset_right = 198.0
offset_bottom = 102.0
scale = Vector2(1.6, 1.6)
texture = ExtResource("5_lr5r8")

[node name="Crab" type="TextureRect" parent="Node2D2"]
y_sort_enabled = true
layout_mode = 0
offset_left = 206.0
offset_top = 80.0
offset_right = 222.0
offset_bottom = 96.0
scale = Vector2(1.6, 1.6)
texture = ExtResource("6_w456g")

[node name="Bat" type="TextureRect" parent="Node2D2"]
y_sort_enabled = true
layout_mode = 0
offset_left = 206.0
offset_top = 103.0
offset_right = 222.0
offset_bottom = 119.0
scale = Vector2(1.6, 1.6)
texture = ExtResource("7_o5s6u")

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
